removing the trailing comment

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
       <a href="https://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" class="reddit btn" title="Share on Reddit"><i class="fa fa-reddit"></i><span> Reddit</span></a>
     </li>
   </ul>
-</div><!-- end share-buttons --> -->
+</div><!-- end share-buttons -->
 
 <div id="disqus_thread"></div>
 <script>
